# c-_Project_Init

./: .gitignore  README.md  xfcreate.py
template/: .gitignore  CMakeLists.txt  dep_copy.sh  depend.prop  package.sh  start_all.sh
template/cmake/: depend_git.cmake
template/include/: helloword.h
template/proto/: proto_template.cmake
template/src/: main.cpp
template/test/: CMakeLists.txt  main.cpp
